# uShell

./: .gitignore  1  CMakeLists.txt  Makefile
inc/: ush.h
libmx/: Makefile
libmx/inc/: libmx.h
libmx/src/: mx_bubble_sort.c  mx_delete_list.c  mx_itoa.c  mx_pop_front.c  mx_push_back.c  mx_quicksort.c  mx_read_line.c  mx_sort_list.c  mx_swap_char.c
src/builtins/: mx_add_new_path.c  mx_add_one_rank.c  mx_add_process.c  mx_buildin_list.c  mx_call_av.c  mx_call_env.c  mx_cd.c  mx_check_env.c  mx_checker_flag.c  mx_clear_path.c  mx_close_all_pr.c  mx_ctrl_v_and_not_ascii.c  mx_del_elem_env.c  mx_del_last_var.c  mx_del_our_node.c  mx_del_pid_process.c  mx_del_top_process.c  mx_del_variable_env.c  mx_delete_branch.c  mx_echo.c  mx_env.c  mx_env_status.c  mx_env_to_ush.c  mx_env_ush.c  mx_export.c  mx_fg.c  mx_fill_build.c  mx_filling_env.c  mx_find_cur_list.c  mx_find_env.c  mx_find_env_path.c  mx_find_name.c  mx_find_next_tok.c  mx_find_our_node.c  mx_flang_comand.c  mx_get_1st_node.c  mx_get_info.c  mx_get_name.c  mx_get_next_token.c  mx_get_tok.c  (+25 more)
src/exec/: mx_exec.c  mx_exec_dmore.c  mx_exec_env_fpr.c  mx_exec_env_pr.c  mx_exec_less.c  mx_exec_more.c  mx_exec_opmore.c  mx_exec_pipe.c  mx_exec_processes.c  mx_exec_token.c  mx_exec_tree.c  mx_execute.c  mx_execute_tree.c
src/parsers/: mx_key_delite.c  mx_mini_parser_tab.c  mx_one_symbol.c  mx_parsing.c  mx_parsing_input.c
src/printing/: mx_print_cont.c  mx_print_esc.c  mx_print_stat.c  mx_print_susp.c  mx_print_tab_cmds.c  mx_print_tab_comands.c  mx_printerr_env.c  mx_printstr_env.c
src/signals/: mx_ctrl_r.c  mx_read_keyboard.c
src/sortings/: mx_create_node_proc.c  mx_pop_back_proc.c  mx_pop_front_proc.c  mx_pop_list.c  mx_push_back_proc.c  mx_push_back_res.c  mx_push_front_proc.c
src/utils/: bit_func.c  bit_function.c  main.c  mx_add_to_str_arr.c  mx_add_to_strarr.c  mx_arr_str_to_arr_str.c  mx_arr_str_to_str.c  mx_arr_to_str.c  mx_arrstr_to_arrstr.c  mx_arrstr_to_str.c  mx_ascii.c  mx_audit_str.c  mx_bquote_str.c  mx_chdir_l.c  mx_chdir_p.c  mx_check_str.c  mx_check_syntax.c  mx_create_ast.c  mx_create_cmds.c  mx_create_commands.c  mx_delete_last.c  mx_do_replace.c  mx_dupl_arr_str.c  mx_duplicate_arr.c  mx_dupstrarr.c  mx_env_to_var.c  mx_exit.c  mx_get_char.c  mx_getchar.c  mx_history.c  mx_home.c  mx_input.c  mx_insert_tree.c  mx_is_ascii.c  mx_is_str_begin.c  mx_launch_ush.c  mx_lexer.c  mx_lexical.c  mx_loop.c  mx_not_ascii.c  (+34 more)
