cmake_minimum_required(VERSION 3.15)
project(ushell C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libmx)
include_directories(libmx/inc)
include_directories(libmx/src)
include_directories(src)

add_executable(ushell
        inc/libmx.h
        inc/macroses.h
        inc/ush.h
        libmx/inc/libmx.h
        libmx/src/mx_add_strarr.c
        libmx/src/mx_arrstr_to_str.c
        libmx/src/mx_binary_search.c
        libmx/src/mx_bubble_sort.c
        libmx/src/mx_count_substr.c
        libmx/src/mx_count_words.c
        libmx/src/mx_create_node.c
        libmx/src/mx_del_extra_spaces.c
        libmx/src/mx_del_strarr.c
        libmx/src/mx_dupstrarr.c
        libmx/src/mx_file_to_str.c
        libmx/src/mx_foreach.c
        libmx/src/mx_get_char_index.c
        libmx/src/mx_get_substr_index.c
        libmx/src/mx_get_user_home.c
        libmx/src/mx_get_user_name.c
        libmx/src/mx_getchar.c
        libmx/src/mx_hex_to_nbr.c
        libmx/src/mx_is_str_starts.c
        libmx/src/mx_isspace.c
        libmx/src/mx_itoa.c
        libmx/src/mx_list_size.c
        libmx/src/mx_memccpy.c
        libmx/src/mx_memchr.c
        libmx/src/mx_memcmp.c
        libmx/src/mx_memcpy.c
        libmx/src/mx_memmem.c
        libmx/src/mx_memmove.c
        libmx/src/mx_memrchr.c
        libmx/src/mx_memset.c
        libmx/src/mx_nbr_to_hex.c
        libmx/src/mx_pop_back.c
        libmx/src/mx_pop_front.c
        libmx/src/mx_pop_list.c
        libmx/src/mx_pow.c
        libmx/src/mx_print_strarr.c
        libmx/src/mx_print_unicode.c
        libmx/src/mx_printchar.c
        libmx/src/mx_printerr.c
        libmx/src/mx_printint.c
        libmx/src/mx_printstr.c
        libmx/src/mx_push_back.c
        libmx/src/mx_push_front.c
        libmx/src/mx_quicksort.c
        libmx/src/mx_read_line.c
        libmx/src/mx_realloc.c
        libmx/src/mx_replace_substr.c
        libmx/src/mx_sort_list.c
        libmx/src/mx_sqrt.c
        libmx/src/mx_str_reverse.c
        libmx/src/mx_strcat.c
        libmx/src/mx_strcmp.c
        libmx/src/mx_strcmp2.c
        libmx/src/mx_strcpy.c
        libmx/src/mx_strdel.c
        libmx/src/mx_strdup.c
        libmx/src/mx_strjoin.c
        libmx/src/mx_strjoin2.c
        libmx/src/mx_strjoin3.c
        libmx/src/mx_strlen.c
        libmx/src/mx_strncmp.c
        libmx/src/mx_strncpy.c
        libmx/src/mx_strndup.c
        libmx/src/mx_strnew.c
        libmx/src/mx_strsplit.c
        libmx/src/mx_strstr.c
        libmx/src/mx_strtrim.c
        libmx/src/mx_swap_char.c
        src/bit_function.c
        src/main.c
        src/mx_0_and_x.c
        src/mx_add_one_rank.c
        src/mx_add_process.c
        src/mx_ascii.c
        src/mx_audit_str.c
        src/mx_buildin_list.c
        src/mx_call_vlad.c
        src/builtins/mx_cd.c
        src/mx_charge_paranetr_export.c
        src/mx_chdir_l.c
        src/mx_chdir_p.c
        src/mx_check_env.c
        src/mx_check_symbol.c
        src/mx_clear_tokens.c
        src/mx_close_all_pr.c
        src/mx_create_ast.c
        src/mx_create_comands.c
        src/mx_create_tnode.c
        src/mx_create_token.c
        src/mx_ctrl_r.c
        src/mx_ctrl_v_and_not_ascii.c
        src/mx_del_last_rank.c
        src/mx_del_pid_process.c
        src/mx_del_top_process.c
        src/mx_delete_ast.c
        src/mx_delete_tnode.c
        src/mx_delete_veriable_env.c
        src/mx_do_replace.c
        src/builtins/mx_echo.c
        src/mx_end_flag.c
        src/builtins/mx_env.c
        src/mx_env_to_vlad.c
        src/mx_exec_dmore.c
        src/mx_exec_env_pr.c
        src/mx_exec_less.c
        src/mx_exec_more.c
        src/mx_exec_token.c
        src/mx_execute.c
        src/mx_execute_proces.c
        src/mx_execute_tree.c
        src/mx_exit.c
        src/builtins/mx_export.c
        src/builtins/mx_fg.c
        src/mx_find_tnode.c
        src/mx_flang_comand.c
        src/mx_fre_env_path.c
        src/mx_get_info.c
        src/mx_get_min_tnode.c
        src/mx_get_name.c
        src/mx_get_next_token.c
        src/mx_get_path_env.c
        src/mx_get_token_type.c
        src/mx_get_twidth.c
        src/mx_history.c
        src/mx_home.c
        src/mx_if_new_parameter.c
        src/mx_input.c
        src/mx_insert_tree.c
        src/mx_is_buildin.c
        src/mx_is_char.c
        src/mx_is_commad.c
        src/mx_is_link.c
        src/mx_is_operator.c
        src/builtins/mx_jobs.c
        src/mx_key_delite.c
        src/mx_key_duble_tab.c
        src/mx_key_tab.c
        src/mx_lexer.c
        src/mx_mini_parser_tab.c
        src/mx_not_ascii.c
        src/mx_one_symbol.c
        src/mx_parametr_shell.c
        src/mx_parsing.c
        src/mx_parsing_input.c
        src/mx_pipe_execute.c
        src/mx_print_cont.c
        src/mx_print_env.c
        src/mx_print_error_env.c
        src/mx_print_esc.c
        src/mx_print_susp.c
        src/mx_print_tab_comands.c
        src/mx_printstr_env.c
        src/mx_push_env.c
        src/mx_pwd.c
        src/mx_read_comand.c
        src/mx_read_keyboard.c
        src/mx_reg.c
        src/mx_return_value.c
        src/mx_serch_list.c
        src/mx_signals.c
        src/mx_start_program.c
        src/mx_str_bquote.c
        src/mx_strarr_add_to_strarr.c
        src/mx_subs.c
        src/mx_syntax_analyzer.c
        src/mx_token_in_program.c
        src/mx_unset.c
        src/mx_unset_fds.c
        src/mx_ush_close.c
        src/mx_ush_init.c
        src/mx_var_tree_to_var.c
        src/mx_wait_process.c
        src/mx_which.c
        src/mx_write_from_to.c
        src/out_monitor.c)
