cmake_minimum_required(VERSION 3.15)
project(USH C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libmx)
include_directories(libmx/inc)
include_directories(libmx/src)
include_directories(src)
include_directories(src/builtins)
include_directories(src/errhandlers)
include_directories(src/history)
include_directories(src/memory)
include_directories(src/parsers)
include_directories(src/sorting)
include_directories(src/stream)
include_directories(src/utils)

add_executable(USH
        inc/ush.h
        libmx/inc/libmx.h
        libmx/src/mx_atoi.c
        libmx/src/mx_binary_search.c
        libmx/src/mx_bubble_sort.c
        libmx/src/mx_count_substr.c
        libmx/src/mx_count_words.c
        libmx/src/mx_create_node.c
        libmx/src/mx_del_extra_spaces.c
        libmx/src/mx_del_strarr.c
        libmx/src/mx_delete_list.c
        libmx/src/mx_file_to_str.c
        libmx/src/mx_foreach.c
        libmx/src/mx_get_char_index.c
        libmx/src/mx_get_substr_index.c
        libmx/src/mx_hex_to_nbr.c
        libmx/src/mx_isalpha.c
        libmx/src/mx_isdigit.c
        libmx/src/mx_isspace.c
        libmx/src/mx_itoa.c
        libmx/src/mx_list_size.c
        libmx/src/mx_memccpy.c
        libmx/src/mx_memchr.c
        libmx/src/mx_memcmp.c
        libmx/src/mx_memcpy.c
        libmx/src/mx_memmem.c
        libmx/src/mx_memmove.c
        libmx/src/mx_memrchr.c
        libmx/src/mx_memset.c
        libmx/src/mx_nbr_to_hex.c
        libmx/src/mx_pop_back.c
        libmx/src/mx_pop_front.c
        libmx/src/mx_pow.c
        libmx/src/mx_print_strarr.c
        libmx/src/mx_print_unicode.c
        libmx/src/mx_printchar.c
        libmx/src/mx_printerr.c
        libmx/src/mx_printint.c
        libmx/src/mx_printstr.c
        libmx/src/mx_push_back.c
        libmx/src/mx_push_front.c
        libmx/src/mx_quicksort.c
        libmx/src/mx_read_line.c
        libmx/src/mx_realloc.c
        libmx/src/mx_replace_substr.c
        libmx/src/mx_sort_list.c
        libmx/src/mx_sqrt.c
        libmx/src/mx_str_reverse.c
        libmx/src/mx_strcat.c
        libmx/src/mx_strcmp.c
        libmx/src/mx_strcpy.c
        libmx/src/mx_strdel.c
        libmx/src/mx_strdup.c
        libmx/src/mx_strjoin.c
        libmx/src/mx_strlen.c
        libmx/src/mx_strncat.c
        libmx/src/mx_strncmp.c
        libmx/src/mx_strncpy.c
        libmx/src/mx_strndup.c
        libmx/src/mx_strnew.c
        libmx/src/mx_strsplit.c
        libmx/src/mx_strstr.c
        libmx/src/mx_strtrim.c
        libmx/src/mx_swap_char.c
        src/builtins/add_proc.c
        src/builtins/del_proc.c
        src/builtins/detect_builds.c
        src/builtins/env_in_list.c
        src/builtins/env_print.c
        src/builtins/mx_create_proc.c
        src/builtins/print_history.c
        src/builtins/proc_chars_find.c
        src/builtins/proc_cut_str.c
        src/builtins/proc_num_find.c
        src/builtins/ush_cd.c
        src/builtins/ush_echo.c
        src/builtins/ush_env.c
        src/builtins/ush_exit.c
        src/builtins/ush_export.c
        src/builtins/ush_fg.c
        src/builtins/ush_processes.c
        src/builtins/ush_pwd.c
        src/builtins/ush_unset.c
        src/builtins/ush_which.c
        src/errhandlers/mx_printerror.c
        src/history/history.c
        src/memory/free_history.c
        src/memory/free_list.c
        src/memory/free_node.c
        src/memory/free_processes.c
        src/parsers/parse.c
        src/parsers/parse_backquote.c
        src/parsers/parse_dblqte_openparen_closeparen_opbrce_clbrce.c
        src/parsers/parse_dollar.c
        src/parsers/parse_get_format_str.c
        src/parsers/parse_get_proc_output.c
        src/parsers/parse_get_subst_replace_str.c
        src/parsers/parse_mark_chars.c
        src/parsers/parse_mx_check_parse.c
        src/parsers/parse_mx_create_outer_subst_n_dblq_list.c
        src/parsers/parse_pop_push_free_format_list.c
        src/parsers/parse_replace_sub_str.c
        src/parsers/parse_single_quote.c
        src/parsers/parse_substitutions.c
        src/parsers/parse_tilda.c
        src/sorting/mx_pop_frontf.c
        src/sorting/mx_push_backdup.c
        src/stream/read_stream.c
        src/stream/stream.c
        src/utils/main.c
        src/utils/mx_copy_dub_arr.c
        src/utils/mx_delit_fre.c
        src/utils/mx_detect_exp.c
        src/utils/mx_empty_proc.c
        src/utils/mx_enable_disable_canon.c
        src/utils/mx_getopt.c
        src/utils/mx_join.c
        src/utils/mx_name_search.c
        src/utils/mx_opencheck.c
        src/utils/mx_setup_term.c
        src/utils/mx_strcmp_null.c
        src/utils/mx_strpart.c)
