cmake_minimum_required(VERSION 3.16)
project(USH C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libmx)
include_directories(libmx/inc)
include_directories(libmx/src)
include_directories(src)
include_directories(src/builtins)
include_directories(src/exec)
include_directories(src/memory)
include_directories(src/parsers)
include_directories(src/printing)
include_directories(src/signals)
include_directories(src/utils)

set(CMAKE_C_FLAGS "-ltermcap")

add_executable(USH
        inc/ush.h
        libmx/inc/libmx.h
        libmx/src/mx_atoi.c
        libmx/src/mx_binary_search.c
        libmx/src/mx_bubble_sort.c
        libmx/src/mx_count_substr.c
        libmx/src/mx_count_words.c
        libmx/src/mx_create_node.c
        libmx/src/mx_del_extra_spaces.c
        libmx/src/mx_del_strarr.c
        libmx/src/mx_delete_list.c
        libmx/src/mx_file_to_str.c
        libmx/src/mx_foreach.c
        libmx/src/mx_get_char_index.c
        libmx/src/mx_get_substr_index.c
        libmx/src/mx_hex_to_nbr.c
        libmx/src/mx_isalpha.c
        libmx/src/mx_isdigit.c
        libmx/src/mx_isspace.c
        libmx/src/mx_itoa.c
        libmx/src/mx_list_size.c
        libmx/src/mx_memccpy.c
        libmx/src/mx_memchr.c
        libmx/src/mx_memcmp.c
        libmx/src/mx_memcpy.c
        libmx/src/mx_memmem.c
        libmx/src/mx_memmove.c
        libmx/src/mx_memrchr.c
        libmx/src/mx_memset.c
        libmx/src/mx_nbr_to_hex.c
        libmx/src/mx_pop_back.c
        libmx/src/mx_pop_front.c
        libmx/src/mx_pow.c
        libmx/src/mx_print_strarr.c
        libmx/src/mx_print_unicode.c
        libmx/src/mx_printchar.c
        libmx/src/mx_printerr.c
        libmx/src/mx_printint.c
        libmx/src/mx_printstr.c
        libmx/src/mx_push_back.c
        libmx/src/mx_push_front.c
        libmx/src/mx_quicksort.c
        libmx/src/mx_read_line.c
        libmx/src/mx_realloc.c
        libmx/src/mx_replace_substr.c
        libmx/src/mx_sort_list.c
        libmx/src/mx_sqrt.c
        libmx/src/mx_str_reverse.c
        libmx/src/mx_strcat.c
        libmx/src/mx_strcmp.c
        libmx/src/mx_strcpy.c
        libmx/src/mx_strdel.c
        libmx/src/mx_strdup.c
        libmx/src/mx_strjoin.c
        libmx/src/mx_strlen.c
        libmx/src/mx_strncat.c
        libmx/src/mx_strncmp.c
        libmx/src/mx_strncpy.c
        libmx/src/mx_strndup.c
        libmx/src/mx_strnew.c
        libmx/src/mx_strsplit.c
        libmx/src/mx_strstr.c
        libmx/src/mx_strtrim.c
        libmx/src/mx_swap_char.c
        src/builtins/mx_add_one_rank.c
        src/builtins/mx_add_process.c
        src/builtins/mx_buildin_list.c
        src/builtins/mx_call_vlad.c
        src/builtins/mx_cd.c
        src/builtins/mx_check_env.c
        src/builtins/mx_close_all_pr.c
        src/builtins/mx_ctrl_v_and_not_ascii.c
        src/builtins/mx_del_last_rank.c
        src/builtins/mx_del_pid_process.c
        src/builtins/mx_del_top_process.c
        src/builtins/mx_delete_tnode.c
        src/builtins/mx_delete_veriable_env.c
        src/builtins/mx_echo.c
        src/builtins/mx_end_flag.c
        src/builtins/mx_env.c
        src/builtins/mx_env_to_vlad.c
        src/builtins/mx_export.c
        src/builtins/mx_fg.c
        src/builtins/mx_find_tnode.c
        src/builtins/mx_flang_comand.c
        src/builtins/mx_fre_env_path.c
        src/builtins/mx_get_info.c
        src/builtins/mx_get_min_tnode.c
        src/builtins/mx_get_name.c
        src/builtins/mx_get_next_token.c
        src/builtins/mx_get_path_env.c
        src/builtins/mx_get_token_type.c
        src/builtins/mx_get_twidth.c
        src/builtins/mx_if_new_parameter.c
        src/builtins/mx_jobs.c
        src/builtins/mx_key_duble_tab.c
        src/builtins/mx_key_tab.c
        src/builtins/mx_push_env.c
        src/builtins/mx_pwd.c
        src/builtins/mx_read_comand.c
        src/builtins/mx_return_value.c
        src/builtins/mx_serch_list.c
        src/builtins/mx_unset.c
        src/builtins/mx_unset_fds.c
        src/builtins/mx_which.c
        src/exec/mx_exec_dmore.c
        src/exec/mx_exec_env_pr.c
        src/exec/mx_exec_less.c
        src/exec/mx_exec_more.c
        src/exec/mx_exec_token.c
        src/exec/mx_execute.c
        src/exec/mx_execute_proces.c
        src/exec/mx_execute_tree.c
        src/exec/mx_pipe_execute.c
        src/memory/mx_charge_paranetr_export.c
        src/memory/mx_clear_tokens.c
        src/parsers/mx_check_symbol.c
        src/parsers/mx_is_buildin.c
        src/parsers/mx_is_char.c
        src/parsers/mx_is_commad.c
        src/parsers/mx_is_link.c
        src/parsers/mx_is_operator.c
        src/parsers/mx_key_delite.c
        src/parsers/mx_mini_parser_tab.c
        src/parsers/mx_one_symbol.c
        src/parsers/mx_parsing.c
        src/parsers/mx_parsing_input.c
        src/printing/mx_print_cont.c
        src/printing/mx_print_env.c
        src/printing/mx_print_esc.c
        src/printing/mx_print_susp.c
        src/printing/mx_print_tab_comands.c
        src/printing/mx_printerr_env.c
        src/printing/mx_printstr_env.c
        src/signals/mx_ctrl_r.c
        src/signals/mx_read_keyboard.c
        src/signals/mx_signals.c
        src/utils/bit_func.c
        src/utils/main.c
        src/utils/mx_0_and_x.c
        src/utils/mx_add_to_strarr.c
        src/utils/mx_arrstr_to_str.c
        src/utils/mx_ascii.c
        src/utils/mx_audit_str.c
        src/utils/mx_chdir_l.c
        src/utils/mx_chdir_p.c
        src/utils/mx_create_ast.c
        src/utils/mx_create_comands.c
        src/utils/mx_create_tnode.c
        src/utils/mx_create_token.c
        src/utils/mx_delete_last.c
        src/utils/mx_do_replace.c
        src/utils/mx_dupstrarr.c
        src/utils/mx_exit.c
        src/utils/mx_getchar.c
        src/utils/mx_history.c
        src/utils/mx_home.c
        src/utils/mx_input.c
        src/utils/mx_insert_tree.c
        src/utils/mx_is_str_starts.c
        src/utils/mx_lexer.c
        src/utils/mx_loop.c
        src/utils/mx_not_ascii.c
        src/utils/mx_parametr_shell.c
        src/utils/mx_pop_front_free_data.c
        src/utils/mx_pop_list.c
        src/utils/mx_reg.c
        src/utils/mx_start_program.c
        src/utils/mx_str_bquote.c
        src/utils/mx_strarr_add_to_strarr.c
        src/utils/mx_strcmp2.c
        src/utils/mx_strjoin2.c
        src/utils/mx_strjoin3.c
        src/utils/mx_subs.c
        src/utils/mx_syntax_analyzer.c
        src/utils/mx_term_out.c
        src/utils/mx_token_in_program.c
        src/utils/mx_ush_close.c
        src/utils/mx_ush_init.c
        src/utils/mx_var_tree_to_var.c
        src/utils/mx_wait_process.c
        src/utils/mx_write_from_to.c)
